# voxtral

./: .env.tmp  .gitignore  LICENSE  README.md  devpost.md  pyproject.toml
.avante_chat_history/: README.md.json  scripts__everything.py.json  scripts__test_tokenizer.py.json  scripts__train.py.json  src__mimistral__data__indexing.py.json  src__mimistral__data__preprocessing.py.json  src__mimistral__data__scraping.py.json  src__voxtral__data__preprocessing.py.json  src__voxtral__data__scraping.py.json  src__voxtral__server.py.json  src__voxtral__tokenizer__model.py.json  src__voxtral__tokenizer__word_level_whisper.py.json  src__voxtral__trainer__data.py.json  src__voxtral__trainer__test.py.json  src__voxtral__trainer__trainer.py.json
data/: searches.txt  urls.txt
scripts/: everything.py  index.py  preprocess.py  scrape.py  serve.py  test.py  test_tokenizer.py  train.py  train_overfit.py  train_test.py
slides/: 0.md  10.md  2.md  3.md  5.md  7.md  8.md
src/mimistral/: __init__.py  tokenizer.py
src/mimistral/data/: indexer.py  indexing.py  preprocessing.py  scraper.py  scraping.py
src/mimistral/models/: word_level_whisper.py
src/mimistral/tokenizer/mimi/: client.py
src/mimistral/tokenizer/mimi/models/: compression.py  lm.py
src/voxtral/: __init__.py  server.py
src/voxtral/data/: indexing.py  preprocessing.py  scraping.py
src/voxtral/tokenizer/: model.py  word_level_whisper.py
src/voxtral/tokenizer/mimi/: client_utils.py  server.py
src/voxtral/trainer/: config.py  data.py  test.py  train_utils.py  trainer.py  utils.py
(+10 files in other folders)
