[project]
name = "mimistral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4.1",
    "youtube-search-python>=1.6.6",
    "tqdm>=4.66.5",
    "yt-dlp>=2024.9.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
